# build

./: .gitignore  Makefile.in  configure  configure.ac  definition.mk  fiasco.mk  kernel.mk  l4android.mk  l4re.mk  link-wrapper  main.mk
patches/gingerbread-x86/: 01-bionic-avoid-race-condition.patch  02-avoid-redefining-fortify-source.patch  03-add-arch-variant-for-asus-eeepc.patch  04-quake.patch  05-webkit-add-logtag.patch  10-expressos-disable-optional-dvm-features.patch  11-expressos-disable-optional-features.patch  12-expressos-glue.patch
scripts/: extract-ramdisk.sh  idl_server_c.py  idl_server_h.py  parse_idl.py  search-dependency.py  update-ramdisk.sh
